2003-01-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-log.c (gda_log_error, gda_log_message): use
	g_strdup_printf instead of vprintf.

2003-01-13  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c:
	* providers/postgres/gda-postgres-recordset.c:
	* providers/postgres/gda-postgres.h:
	* providers/postgres/utils.c: added support for 'bytea' type fields as
	GDA_VALUE_TYPE_BINARY.

	* testing/postgres-test.c: added new 'bytea' field to test and display
	errors when some statement fails.

2003-01-10  Santi Camps <santi@gnome-db.org>

	* libgda/report/Makefile.am: install gda-report.dtd to 
	  \$(datadir)/libgda/xml instead of \$(datadir)/libgda/dtd
	* libgda/report/gda-report-example.xml: added a sql query to be well 
	  formed against the .dtd
	* libgda/report/gda-report.dtd.in: some little changes to simplify the
	  use of libxml
	* libgda/report/testing/*: a simple program to make some tests 
	* libgda/report/libgda-report/Makefile.am: some new files added
	* libgda/report/libgda-report/gda-report-document.[ch]: changed. Now it
	  manages the report as a document, but not the root element "report"
	* libgda/report/libgda-report/gda-report-types.h: most of types removed,
	  and now validated against the .dtd
	* libgda/report/libgda-report/gda-report.h: some new files added
	* libgda/report/libgda-report/gda-report-item.[ch]: implemented a generic
	  item of the report.  Each element of the report will inherit from it
	* libgda/report/libgda-report/gda-report-valid.[ch]:  implemented some
	  validations against the .dtd
	* libgda/report/libgda-report/gda-report-item-report.[ch]: implemented
	  the report root element "report"
	* libgda/report/libgda-report/gda-report-item-reportheader.[ch]: 
	  implemented the report item "reportheader"

2003-01-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mdb/gda-mdb-provider.c (get_mdb_procedures): implemented
	GDA_CONNECTION_SCHEMA_PROCEDURES.